# hybride_club_dijon

./: .gitignore  CLAUDE.md  README.md  nginx.conf  plan.md  pyproject.toml
.claude/: settings.local.json
app/Http/Controllers/: AuthController.php  CoachController.php  ContactController.php  EvenementController.php  SeanceController.php
app/Models/: Evenement.php  Seance.php  User.php  Vote.php
backend/: auth.py  database.py  main.py  scheduler.py
backend/routes/: auth.py  coaches.py  contact.py  evenements.py  sessions.py
database/migrations/: 0001_01_01_000000_create_users_table.php  2025_01_01_000001_create_seances_table.php  2025_01_01_000002_create_votes_table.php  2025_01_01_000003_create_evenements_table.php
database/seeders/: DatabaseSeeder.php
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CoachCard.jsx  Footer.jsx  Navbar.jsx  SessionCard.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Home.jsx  Login.jsx  Members.jsx
frontend/src/services/: api.js
public/: index.html
public/assets/: index-Bl0ZabeY.js  index-C8ImUbnM.js  index-uNy6JJ5Y.css
routes/: api.php  console.php  web.php
